--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ button {
 
 button:hover {
     transform: scale(1.1);
-    color: indianred;
+    color: crimson;
 }
 
 button:active {
@@ -115,8 +115,8 @@ button::after, button::after {
 
 .main-content h2 {
     font-size: 3.5rem;
-    color: black;
-    border-bottom: 2px solid black;
+    color: crimson;
+    border-bottom: 2px solid crimson;
 }
 
 #orangeparagraph {
@@ -156,4 +156,72 @@ footer {
 .footer-links a {
     text-decoration: none;
     color: azure;
+    transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+    color: indianred
+}
+
+/*About Us section styling*/
+
+.two-column-about-us-section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 77px;
+    margin-left: 70px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+}
+
+.column {
+    flex-basis: 48%;
+}
+
+.column img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    height: auto;
+}
+
+.about-section {
+    background-color: rgba(165, 165, 165, 0.5);
+    padding: 25px;
+    max-width: 800px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+    font-size: 1.5rem;
+}
+
+.about-section h2 {
+    color: crimson;
+    font-size: 3.5rem;
+    border-bottom: 3px solid crimson;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .two-column-about-us-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }    
+}
+
+/*Call To Action styling*/
+.call-to-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 3rem 1rem;
+    background-color: #fff;
+    margin-bottom: 2rem;
+}
+
+.call-to-action h2 {
+    color: crimson;
+    font-size: 3rem;
 }
