--- a/style.css
+++ b/style.css
@@ -283,3 +283,60 @@ textarea:invalid:not(:placeholder-shown) {
     font-size: 0.875rem;
     margin-top: 0.25rem;
 }
+
+/*Gallery page styling*/
+
+#gallery-container {
+    margin-top: 50px;
+}
+
+#gallery-images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 75vw;
+    margin: 20 px auto;
+}
+
+figure {
+    margin: 10px;
+    padding: 0px;
+    position: relative;
+}
+
+figure img {
+    width: 100%;
+}
+
+#gallery-images img {
+    padding: 0px;
+    border: 3px solid #fff;
+    z-index: -1;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: 0px 0px #ccc;
+}
+
+figcaption {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    text-align: center;
+    color: #5e423f;
+    z-index: 1;
+    padding: 9px 0px 11px 0px;
+    text-transform: uppercase;
+    font-size: 1vw;
+    position: absolute;
+    bottom: 6px;
+}
+
+@media screen and (max-width: 600px) {
+    figcaption {
+        font-size: 3vw;
+    }
+
+    #gallery {
+        grid-template-columns: 1fr;
+        width: 90vw;
+    }
+}
