--- a/style.css
+++ b/style.css
@@ -286,15 +286,24 @@ textarea:invalid:not(:placeholder-shown) {
 
 /*Gallery page styling*/
 
+h2 {
+    color: crimson;
+    font-size: 3.5rem;
+    border-bottom: 3px solid crimson;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
 #gallery-container {
     margin-top: 50px;
+    text-align: center;
 }
 
 #gallery-images {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 75vw;
-    margin: 20 px auto;
+    margin: 20px auto;
 }
 
 figure {
@@ -321,11 +330,11 @@ figcaption {
     background-color: rgba(255, 255, 255, 0.5);
     width: 100%;
     text-align: center;
-    color: #5e423f;
+    color: #333;
     z-index: 1;
     padding: 9px 0px 11px 0px;
     text-transform: uppercase;
-    font-size: 1vw;
+    font-size: 1.5vw;
     position: absolute;
     bottom: 6px;
 }
