--- a/style.css
+++ b/style.css
@@ -284,6 +284,26 @@ textarea:invalid:not(:placeholder-shown) {
     margin-top: 0.25rem;
 }
 
+/*Iframe styling*/
+
+.iframe-container {
+    text-align: center;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 46.25%; /* 16:9 aspect ratio */
+    margin: 2rem 0;
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 768px) {
+    .iframe-container {
+        padding-bottom: 75%;
+    }
+}
+
 /*Gallery page styling*/
 
 h2 {
